Fixes items alignment on navbar

--- a/themes/partage-ton-pain/assets/sass/ui/_navbar.scss
+++ b/themes/partage-ton-pain/assets/sass/ui/_navbar.scss
@@ -13,6 +13,7 @@
     }
 
     .items {
+        display: flex;
         margin-left: auto;
 
         ul {
